# therapist_behaviour_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  EDA.ipynb  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  endpoints.py
app/routes/: __init__.py  bert_classifier.py  llm_classifier.py  xgboost_classifier.py
app/schemas/: classifiers.py
classifiers/bert/: training_script.py  utils.py
classifiers/llm/: generate_context.py  utils.py
config/: config.py
data/: classes.txt  context.txt  test.csv  train.csv  training.csv
models/: llm_classifier.yaml
pipeline/: EDA.ipynb  process_data.py
pipeline/bert/: __init__.py  training_script.py  utils.py
pipeline/evaluation/: evaluate.py
pipeline/llm/: __init__.py  classifier.py  generate_context.py  upload_to_qdrant.py  utils.py
pipeline/xgboost/: train_xgboost_classifier.py
scripts/: trial.ipynb
