[tool.poetry]
name = "therapist-behaviour-project"
version = "0.1.0"
description = "temporal repo for therapist project assesment"
authors = ["jafet sierra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
evaluate = "^0.4.1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
typer = "^0.11.1"
langchain = "^0.1.13"
cloudpathlib = "^0.18.1"
openai = "^1.14.3"
langchain-openai = "^0.1.1"
transformers = {extras = ["torch"], version = "^4.39.2"}
accelerate = {extras = ["torch"], version = "^0.28.0"}
scikit-learn = "^1.4.1.post1"
qdrant-client = "^1.8.2"
xgboost = "^2.0.3"
wandb = "^0.16.6"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"